--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     background-color: #5f9dd9;
     background-image: url(img/20211225_124439.jpg);
     background-size: cover;
-    background-position: 0 0;
+    background-position: center;
 }
 
 .container {
@@ -18,30 +18,33 @@ body {
     text-align: center;
     align-items: center;
     padding: 15px;
-    position: relative;
+    /* position: relative; */
     width: 100%;
     height: 100vh;
+    flex-direction: column;
+    gap: 30px;
+
+
 }
 
 .form {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 5px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.form__none {
-    display: none;
 }
 
 .form__input {
-    width: 150px;
-    padding: 5px 10px;
+    width: 80px;
+    padding: 10px 0px 10px 5px;
     outline: none;
     border-radius: 5px;
+}
+
+.form__input_title {
+    width: 100%;
+    text-align: center;
+    font-size: 16px;
 }
 
 .tasks-wrapper {
@@ -75,8 +78,15 @@ body {
 .countdown {
     display: flex;
     justify-content: center;
-    column-gap: 10px;
+    gap: 10px;
+
+    @media(max-width: 500px) {
+
+        flex-direction: column;
+        min-width: 300px;
+    }
 }
+
 
 .countdown-item {
 
@@ -94,6 +104,8 @@ body {
     border: 0;
     background-color: #a1b6d0;
     color: #d0deed;
+    width: 100%;
+    font-size: 16px;
 }
 
 .days {
