--- a/style.css
+++ b/style.css
@@ -6,10 +6,10 @@
 
 body {
     font-family: Roboto, sans-serif;
-    background-color: #5f9dd9;
     background-image: url(img/20211225_124439.jpg);
     background-size: cover;
-    background-position: center;
+    background-position: top center;
+    /* background-repeat: no-repeat; */
 }
 
 .container {
@@ -17,14 +17,9 @@ body {
     justify-content: center;
     text-align: center;
     align-items: center;
-    padding: 15px;
-    /* position: relative; */
-    width: 100%;
-    height: 100vh;
+    padding: 50px 15px;
     flex-direction: column;
     gap: 30px;
-
-
 }
 
 .form {
