--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     background-image: url(img/20211225_124439.jpg);
     background-size: cover;
     background-position: top center;
-    /* background-repeat: no-repeat; */
+    background-attachment: fixed
 }
 
 .container {
@@ -40,6 +40,22 @@ body {
     width: 100%;
     text-align: center;
     font-size: 16px;
+}
+
+.form__wrapper {
+    display: flex;
+    gap: 5px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.input__wrap {
+    display: flex;
+    flex-direction: column;
+}
+
+.input__wrap label {
+    color: #fff;
 }
 
 .tasks-wrapper {
